# algorithms

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  algorithms.hpp  configure.sh  generate_coverage_report.sh  make  merge_sort.cpp
.github/workflows/: main.yml
data/: .gitignore
demos/: CMakeLists.txt  count_comparisons.cpp  count_inversions.cpp  karatsuba.cpp  mergesort.cpp
include/: CMakeLists.txt  algorithms.hpp  bigint.hpp  graphs.cpp  graphs.hpp
lib/: algorithms.hpp  bigint.hpp  test.hpp
src/: karatsuba.cpp  mergesort.cpp
tests/: CMakeLists.txt  main.cpp  test.hpp  test_algorithms.hpp  test_bigint.hpp
